Fix password input's button group alignment. Rename readme file back to what it was previously to retain formatting.

--- a/themes/antergos/css/bootstrap/theme.css
+++ b/themes/antergos/css/bootstrap/theme.css
@@ -381,6 +381,10 @@ input.password.form-control:focus {
 	padding: 7px 12px;
 }
 
+#passwordArea .btn-group > .btn {
+	float: initial;
+}
+
 #logArea {
 	position: absolute;
 	top: 25%;
